--- a/presentations/vic-geogeeks-2018-01-30/vic-geogeeks-2018-01-30.html
+++ b/presentations/vic-geogeeks-2018-01-30/vic-geogeeks-2018-01-30.html
@@ -248,8 +248,8 @@ Fantastic online **R** Community
 
 ???
 
-- movement labelled Geographical Data Science (GDS). This recent concept essentially combines ‘data science’ with GIS.
-- focus on reproducibility and a command-line interface
+- movement labelled Geographical Data Science (GDS). Combines ‘data science’ with GIS.
+- focus on reproducibility and programming interface
 
 ---
 
@@ -285,7 +285,7 @@ Fantastic online **R** Community
 ]
 
 .footnote[
-[1] Geocomputation with R, [Table 1.1](https://geocompr.robinlovelace.net/intro.html#tab:gdsl)
+[1] Lovelace, Nowosad, and Muenchow: Geocomputation with R ([Table 1.1](https://geocompr.robinlovelace.net/intro.html#tab:gdsl))
 ]
 
 ???
@@ -300,6 +300,8 @@ Why R for spatial?
 
 ---
 background-image: url(img/vic-open-data.png)
+---
+background-image: url(img/dog.png)
 ---
 
 
@@ -336,7 +338,11 @@ ggplot() +
 
 ???
 
-Plotting - built in in sf, even better in ggplot2
+Plotting - built-in in sf, even better in ggplot2
+
+---
+
+background-image: url(img/hydrant.png)
 
 ---
 
@@ -520,13 +526,6 @@ dogs_and_hydrants &lt;- st_join(dogs, hydrants) %&gt;%
 * `st_buffer`: compute a buffer around this geometry/each geometry
 * `st_make_valid`: tries to make an invalid geometry valid (requires lwgeom)
 * `st_boundary`: return the boundary of a geometry
-
-### convenience functions
-
-* `st_zm`: sets or removes z and/or m geometry
-* `st_coordinates`: retrieve coordinates in a matrix or data.frame
-* `st_geometry`: set, or retrieve `sfc` from an `sf` object
-* `st_is`: check whether geometry is of a particular type
 
 ---
 
